# MatrixLibrary

./: .clang-format  .clang-tidy  .pre-commit-config.yaml  CMakeLists.txt  requirements.txt
matrix/: CMakeLists.txt
matrix/include/: matrix.hpp
scripts/: build.ps1  build.sh
tests/: CMakeLists.txt
tests/unit/: matrix_creation_test.cpp
